<resources>
    <string name="app_name">My Fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_learn_fragment">LearnFragment</string>
    <string name="layout1">LinearLayout1</string>
    <string name="layout2">LinearLayout2</string>
    <string name="fragment1">FragmentType1</string>
    <string name="fragment2">FragmentType2</string>
    <string name="num1">NO.1</string>
    <string name="num2">NO.2</string>
    <string name="num3">NO.3</string>
    <string name="num4">NO.4</string>
    <string name="btn1">Add fragment</string>
    <string name="btn2">Replace fragment</string>
    <string name="btn3">Remove fragment</string>
    <string name="btn4">Hide/Show fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
